Finished first desing concept

--- a/www/index.html
+++ b/www/index.html
@@ -22,14 +22,20 @@
             <span id="signature">Made by: <a href="https://github.com/pkwasniok">pkwasniok</a></span>
         </div>
         <div id="main">
-            <span id="content"></span>
+            <p id="question"></p>
+            <p id="branch"> Kinematyka </p>
+            <textarea id="main-textarea"></textarea>
+            <button id="main-submit">Submit</button>
         </div>
         <div id="right-bar">
-            <span class='right-bar-button'>
+            <span class='right-bar-button selected'>
                 <h3>Daily question</h3>
             </span>
-            <span class='right-bar-button'>
-                <h3>Random question</h3>
+            <span class="right-bar-button">
+                <h3>Review answers</h3>
+            </span>
+            <span class="right-bar-button">
+                <h3>Ranking</h3>
             </span>
             <span class='right-bar-button'>
                 <h3>Add new question</h3>
@@ -39,5 +45,6 @@
 </body>
 
 <script src="./index.js"></script>
+
 
 </html>
